deploy/retrieveUnpackaged/objects/Opportunity_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Incumbent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New to Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Bid__c</fullName>
        <label>Competitive Bid</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Salesperson__c</fullName>
        <label>Competitor Salesperson</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to note that the competitor is the incumbent</description>
        <inlineHelpText>Please check if this competitor is the incumbent.</inlineHelpText>
        <label>Incumbent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Won</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>RS-C-{0000000}</displayFormat>
        <label>Opportunity Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_be_a_competitor_type</fullName>
        <active>true</active>
        <description>The Account chosen must be a competitor.</description>
        <errorConditionFormula>NOT(ISPICKVAL( Competitor__r.Type , &quot;Competitor&quot;))</errorConditionFormula>
        <errorDisplayField>Competitor__c</errorDisplayField>
        <errorMessage>The Account selected must be a competitor account.</errorMessage>
    </validationRules>
</CustomObject>